--- a/htdocs/static/scss/areas/_breadcrumbs.scss
+++ b/htdocs/static/scss/areas/_breadcrumbs.scss
@@ -4,6 +4,51 @@
 $top-bottom-width: 12px;
 $side-width: 24px;
 
+nav.prevnext {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  margin: 0 0 0.5em 0;
+  padding: 0.25em 0;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+
+    li {
+      font-size: 0.8em;
+      display: inline-block;
+      list-style-type: none;
+      line-height: 1.2em;
+      margin: 0;
+      padding: 0.25em 0.75em;
+      vertical-align: top;
+      width: 49%;
+
+      a {
+        text-decoration: none;
+      }
+
+      span {
+        display: block;
+        font-size: 0.8em;
+        text-transform: uppercase;
+      }
+
+      &:first-child {
+        border-right: 1px solid #eee;
+        text-align: left;
+      }
+
+      &:nth-child(2) {
+        float: right;
+        text-align: right;
+      }
+    }
+  }
+}
+
 .breadcrumbs ul {
   list-style: none;
   margin: 0 0 1em;
