Cleaning up print css

--- a/htdocs/static/scss/areas/_header.scss
+++ b/htdocs/static/scss/areas/_header.scss
@@ -63,7 +63,7 @@
       clear: both;
       height: 0.5in;
       margin: 0;
-      padding-left: 0.5in;
+      padding-left: 0;
       position: absolute;
       top: 0;
       left: 0;
