--- a/htdocs/static/scss/base/_print.css.scss
+++ b/htdocs/static/scss/base/_print.css.scss
@@ -20,6 +20,8 @@
         content: " (" attr(href) ")";
     }
 
+    a.noprint:after { content: ""; }
+
     abbr[title]:after {
         content: " (" attr(title) ")";
     }
