--- a/htdocs/static/scss/areas/_footer.scss
+++ b/htdocs/static/scss/areas/_footer.scss
@@ -46,6 +46,10 @@ footer#page_footer {
       @include respond-to(tablet) {
         width: 30%;
       }
+
+      @include respond-to(print) {
+        display: none;
+      }
     } // &.downloads
 
     &.credits {
@@ -57,6 +61,10 @@ footer#page_footer {
 
       @include respond-to(tablet) {
         width: 30%;
+      }
+
+      @include respond-to(print) {
+        display: none;
       }
     } // &.credits
 
@@ -72,6 +80,15 @@ footer#page_footer {
 
       @include respond-to(tablet) {
         width: 70%;
+      }
+
+
+      @include respond-to(print) {
+        float: none;
+        font-style: italic;
+        margin: 0 auto;
+        text-align: center;
+        width: 80%;
       }
 
     } // &.legalese
