--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -3354,63 +3354,79 @@ section.feature-content {
   .law .primary-content h3 {
     margin: 40px 0 10px 0;
     text-transform: uppercase; }
-  /* line 75, ../scss/areas/_page-law-show.scss */
-  .law .primary-content section.indent, .law .primary-content section.indent-1 {
-    margin-left: 15px; }
-  /* line 79, ../scss/areas/_page-law-show.scss */
+  /* line 84, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent {
+    margin-left: 1em;
+    /* 16px */ }
+  /* line 90, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent-1 {
+    margin-left: 1em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
   .law .primary-content section.indent-2 {
-    margin-left: 30px; }
-  /* line 83, ../scss/areas/_page-law-show.scss */
+    margin-left: 2em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
   .law .primary-content section.indent-3 {
-    margin-left: 45px; }
-  /* line 87, ../scss/areas/_page-law-show.scss */
+    margin-left: 3em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
   .law .primary-content section.indent-4 {
-    margin-left: 60px; }
-  /* line 91, ../scss/areas/_page-law-show.scss */
+    margin-left: 4em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent-5 {
+    margin-left: 5em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent-6 {
+    margin-left: 6em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent-7 {
+    margin-left: 7em; }
+  /* line 90, ../scss/areas/_page-law-show.scss */
+  .law .primary-content section.indent-8 {
+    margin-left: 8em; }
+  /* line 97, ../scss/areas/_page-law-show.scss */
   .law .primary-content p {
-    margin: 0 0 20px 0; }
-  /* line 95, ../scss/areas/_page-law-show.scss */
+    margin: 0 0 1.25em 0; }
+  /* line 101, ../scss/areas/_page-law-show.scss */
   .law .primary-content pre.table {
     margin: 0 0 20px 0;
     font-size: .75em;
     overflow-x: scroll;
     white-space: pre; }
-/* line 104, ../scss/areas/_page-law-show.scss */
+/* line 110, ../scss/areas/_page-law-show.scss */
 .law .secondary-content {
   float: right;
   padding: 20px;
   width: 44%; }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-    /* line 104, ../scss/areas/_page-law-show.scss */
+    /* line 110, ../scss/areas/_page-law-show.scss */
     .law .secondary-content {
       float: none;
       width: 100%; } }
   @media only print {
-    /* line 104, ../scss/areas/_page-law-show.scss */
+    /* line 110, ../scss/areas/_page-law-show.scss */
     .law .secondary-content {
       float: none;
       padding: 0;
       width: 100%; } }
-  /* line 121, ../scss/areas/_page-law-show.scss */
+  /* line 127, ../scss/areas/_page-law-show.scss */
   .law .secondary-content ul {
     list-style: none; }
-  /* line 126, ../scss/areas/_page-law-show.scss */
+  /* line 132, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .identifier,
   .law .secondary-content .title {
     display: block;
     margin: 1em 0 0; }
-  /* line 131, ../scss/areas/_page-law-show.scss */
+  /* line 137, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .ad {
     margin: 0 auto 20px auto; }
     @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-      /* line 131, ../scss/areas/_page-law-show.scss */
+      /* line 137, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .ad {
         max-width: 100%; } }
     @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-      /* line 131, ../scss/areas/_page-law-show.scss */
+      /* line 137, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .ad {
         max-width: 100%; } }
-  /* line 145, ../scss/areas/_page-law-show.scss */
+  /* line 151, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping,
   .law .secondary-content .related-group {
     float: left;
@@ -3418,21 +3434,21 @@ section.feature-content {
     text-align: left;
     width: 32.5%; }
     @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-      /* line 145, ../scss/areas/_page-law-show.scss */
+      /* line 151, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping,
       .law .secondary-content .related-group {
         float: none;
         width: 100%; } }
     @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-      /* line 145, ../scss/areas/_page-law-show.scss */
+      /* line 151, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping,
       .law .secondary-content .related-group {
         float: none;
         width: 100%; } }
-  /* line 163, ../scss/areas/_page-law-show.scss */
+  /* line 169, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping.last {
     margin-right: 0; }
-  /* line 169, ../scss/areas/_page-law-show.scss */
+  /* line 175, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .grouping > section,
   .law .secondary-content .related-group,
   .law .secondary-content .info-box {
@@ -3442,7 +3458,7 @@ section.feature-content {
     margin-bottom: 1em;
     padding: 0;
     text-align: left; }
-    /* line 179, ../scss/areas/_page-law-show.scss */
+    /* line 185, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section h1,
     .law .secondary-content .related-group h1,
     .law .secondary-content .info-box h1 {
@@ -3452,26 +3468,26 @@ section.feature-content {
       margin: 0.5em 0;
       padding: 0 10px;
       text-transform: capitalize; }
-    /* line 188, ../scss/areas/_page-law-show.scss */
+    /* line 194, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section > h1,
     .law .secondary-content .related-group > h1,
     .law .secondary-content .info-box > h1 {
       font-style: normal;
       text-transform: uppercase; }
-    /* line 193, ../scss/areas/_page-law-show.scss */
+    /* line 199, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section p, .law .secondary-content .grouping > section h2,
     .law .secondary-content .related-group p,
     .law .secondary-content .related-group h2,
     .law .secondary-content .info-box p,
     .law .secondary-content .info-box h2 {
       padding: 0 10px; }
-    /* line 197, ../scss/areas/_page-law-show.scss */
+    /* line 203, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section.header-bar-full,
     .law .secondary-content .related-group.header-bar-full,
     .law .secondary-content .info-box.header-bar-full {
       float: none;
       width: 100%; }
-      /* line 201, ../scss/areas/_page-law-show.scss */
+      /* line 207, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section.header-bar-full > h1,
       .law .secondary-content .related-group.header-bar-full > h1,
       .law .secondary-content .info-box.header-bar-full > h1 {
@@ -3485,17 +3501,17 @@ section.feature-content {
         text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.4);
         text-transform: uppercase;
         width: 100%; }
-      /* line 214, ../scss/areas/_page-law-show.scss */
+      /* line 220, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section.header-bar-full p,
       .law .secondary-content .related-group.header-bar-full p,
       .law .secondary-content .info-box.header-bar-full p {
         margin: 0 0 10px 0; }
-    /* line 220, ../scss/areas/_page-law-show.scss */
+    /* line 226, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#legal_self_help,
     .law .secondary-content .related-group#legal_self_help,
     .law .secondary-content .info-box#legal_self_help {
       overflow: hidden; }
-      /* line 223, ../scss/areas/_page-law-show.scss */
+      /* line 229, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section#legal_self_help ul,
       .law .secondary-content .related-group#legal_self_help ul,
       .law .secondary-content .info-box#legal_self_help ul {
@@ -3503,7 +3519,7 @@ section.feature-content {
         list-style-type: none;
         padding: 0 10px;
         margin: 0; }
-        /* line 230, ../scss/areas/_page-law-show.scss */
+        /* line 236, ../scss/areas/_page-law-show.scss */
         .law .secondary-content .grouping > section#legal_self_help ul li,
         .law .secondary-content .related-group#legal_self_help ul li,
         .law .secondary-content .info-box#legal_self_help ul li {
@@ -3512,25 +3528,25 @@ section.feature-content {
           margin-bottom: 15px;
           width: 49%; }
           @media only screen and (min-device-width: 320px) and (max-device-width: 480px), only screen and (min-width: 320px) and (max-width: 480px) {
-            /* line 230, ../scss/areas/_page-law-show.scss */
+            /* line 236, ../scss/areas/_page-law-show.scss */
             .law .secondary-content .grouping > section#legal_self_help ul li,
             .law .secondary-content .related-group#legal_self_help ul li,
             .law .secondary-content .info-box#legal_self_help ul li {
               float: none;
               width: 100%; } }
           @media only screen and (min-device-width: 768px) and (max-device-width: 1024px), only screen and (min-width: 768px) and (max-width: 1024px) {
-            /* line 230, ../scss/areas/_page-law-show.scss */
+            /* line 236, ../scss/areas/_page-law-show.scss */
             .law .secondary-content .grouping > section#legal_self_help ul li,
             .law .secondary-content .related-group#legal_self_help ul li,
             .law .secondary-content .info-box#legal_self_help ul li {
               float: none;
               width: 100%; } }
-          /* line 248, ../scss/areas/_page-law-show.scss */
+          /* line 254, ../scss/areas/_page-law-show.scss */
           .law .secondary-content .grouping > section#legal_self_help ul li article h1,
           .law .secondary-content .related-group#legal_self_help ul li article h1,
           .law .secondary-content .info-box#legal_self_help ul li article h1 {
             font-family: "ff-meta-serif-web-pro", Georgia, "Times New Roman", Times, serif; }
-          /* line 255, ../scss/areas/_page-law-show.scss */
+          /* line 261, ../scss/areas/_page-law-show.scss */
           .law .secondary-content .grouping > section#legal_self_help ul li article.pdf,
           .law .secondary-content .related-group#legal_self_help ul li article.pdf,
           .law .secondary-content .info-box#legal_self_help ul li article.pdf {
@@ -3538,25 +3554,25 @@ section.feature-content {
             background-repeat: no-repeat;
             background-position: top left;
             padding-left: 42px; }
-    /* line 269, ../scss/areas/_page-law-show.scss */
+    /* line 275, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#amendment_attempts h2,
     .law .secondary-content .related-group#amendment_attempts h2,
     .law .secondary-content .info-box#amendment_attempts h2 {
       font-size: 125%; }
-    /* line 273, ../scss/areas/_page-law-show.scss */
+    /* line 279, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#amendment_attempts a,
     .law .secondary-content .related-group#amendment_attempts a,
     .law .secondary-content .info-box#amendment_attempts a {
       font-size: 18px;
       font-style: italic;
       font-weight: bold; }
-    /* line 283, ../scss/areas/_page-law-show.scss */
+    /* line 289, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#court_decisions article.court-decision h1,
     .law .secondary-content .related-group#court_decisions article.court-decision h1,
     .law .secondary-content .info-box#court_decisions article.court-decision h1 {
       font-family: "ff-meta-serif-web-pro", Georgia, "Times New Roman", Times, serif;
       margin: 1em 0 0 0; }
-    /* line 288, ../scss/areas/_page-law-show.scss */
+    /* line 294, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .grouping > section#court_decisions article.court-decision h2,
     .law .secondary-content .related-group#court_decisions article.court-decision h2,
     .law .secondary-content .info-box#court_decisions article.court-decision h2 {
@@ -3566,18 +3582,18 @@ section.feature-content {
       margin: 0;
       text-transform: uppercase; }
     @media only print {
-      /* line 299, ../scss/areas/_page-law-show.scss */
+      /* line 305, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .grouping > section a#keyhelp,
       .law .secondary-content .related-group a#keyhelp,
       .law .secondary-content .info-box a#keyhelp {
         display: none; } }
-  /* line 306, ../scss/areas/_page-law-show.scss */
+  /* line 312, ../scss/areas/_page-law-show.scss */
   .law .secondary-content .dark {
     background-color: #656358;
     color: #fff;
     overflow: hidden;
     text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.4); }
-    /* line 312, ../scss/areas/_page-law-show.scss */
+    /* line 318, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .dark > h1 {
       float: left;
       font-size: 24px;
@@ -3587,19 +3603,19 @@ section.feature-content {
       padding: 10px;
       text-transform: uppercase;
       width: 50%; }
-    /* line 323, ../scss/areas/_page-law-show.scss */
+    /* line 329, ../scss/areas/_page-law-show.scss */
     .law .secondary-content .dark dl {
       float: right;
       margin: 1em 0 0 0;
       padding: 0;
       width: 49%; }
-      /* line 329, ../scss/areas/_page-law-show.scss */
+      /* line 335, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .dark dl dt {
         font-size: 85%;
         margin: 0;
         padding: 0;
         text-transform: uppercase; }
-      /* line 330, ../scss/areas/_page-law-show.scss */
+      /* line 336, ../scss/areas/_page-law-show.scss */
       .law .secondary-content .dark dl dd {
         margin: 0 0 1em 0;
         padding: 0; }
