--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -71,25 +71,31 @@
       text-transform: uppercase;
     }
 
+    // This function that follows allows for the indentation up to 9 levels deep
+    // To increase the number of levels, one can add to the @while $num
+    // statement but really, 9 levels of indentation? Go smack the legislator
+    // that wrote that. You can also change your indent depth globally with the
+    // $indent variable.
+    section {
 
-    section.indent, section.indent-1 {
-      margin-left: 15px;
-    }
+      $num: 1;
+      $indent: 1em;
 
-    section.indent-2 {
-      margin-left: 30px;
-    }
+      &.indent {
+        margin-left: $indent; /* 16px */
+      }
 
-    section.indent-3 {
-      margin-left: 45px;
-    }
+      @while $num < 9 {
 
-    section.indent-4 {
-      margin-left: 60px;
+        &.indent-#{$num} {
+          margin-left: $num * $indent;
+        } // &-#{num}
+        $num: $num +1;
+      } // @while
     }
 
     p {
-      margin: 0 0 20px 0;
+      margin: 0 0 1.25em 0;
     }
 
     pre.table {
